--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>The Reformers</title>
     <link rel="stylesheet" href="style.css">
     <link rel='icon' type='image/x-icon' href='assets/favicon.ico'>
+    <meta name="robots" content="noindex">
 </head>
 <body>
     <div class="book-container">
